--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <button onclick="showMessage()">Click me</button>
+  alert(GetQueryString("q"));
 </body>
 </html>
