--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <title>External JavaScript Example</title>
   <script src="script.js"></script>
 </head>
-
+  
+<Script Language="JavaScript">
   alert(GetQueryString("q"));
+</Script>
+  
 
 </html>
