--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ fetch('https://www.123pan.com/b/api/file/upload_request', options)
   .then(response => response.text())
   .then(result => console.log(result))
   .catch(error => console.log('error', error));
+alert("abc");
 </Script>
   
 
